refactored all the tests according to the changes